[project]
name = "infra-visualiser-action"
version = "0.0.1"
description = "A GitHub action to make it easy for users to upload their Terraform/OpenTofu recipes to out platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.1.0",
    "click>=8.3.1",
    "flake8>=7.3.0",
    "ipdb>=0.13.13",
    "pytest>=9.0.2",
    "requests>=2.32.5",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
